Add metdata tags

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SEO Insights</title>
 
+    <meta property="og:type" content="product" />
+    <meta property="og:description" content="Get SEO data for any website" />
+
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="styles/loader.css" />
     <link rel="stylesheet" href="styles/result.css" />
