--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,13 @@
     />
 
     <link rel="icon" type="image/png" href="/assets/logo.png" />
+    <link rel="apple-touch-icon" href="/assets/logo.png" />
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- <meta name="application-name" content="SEO Insights" />
+    <meta name="theme-color" content="#008000" />
+    <meta name="color-scheme" content="only light" />
+    <meta name="description" content="Get Free SEO Data" /> -->
 
     <script>
       if ("serviceWorker" in navigator) {
