revert offline fallback due to POST Api calls

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     <template id="template">
       <header>
         <h1>SEO Insights</h1>
-        <p>Get SEO data for any URL.</p>
+        <p>Get SEO data for any URL</p>
       </header>
 
       <form class="form">
